hydro_lang/src/rewrites/snapshots/hydro_lang__rewrites__decoupler__tests__move_source_decouple_map.snap
---
source: hydro_lang/src/rewrites/decoupler.rs
expression: ir
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: decoupler :: tests :: * ; | a | println ! ("Got it: {}" , a) }),
        input: Map {
            f: stageleft :: runtime_support :: fn1_type_hint :: < (hydro_lang :: location :: cluster :: cluster_id :: MemberId < () > , i32) , i32 > ({ use crate :: __staged :: stream :: * ; | (_ , b) | b }),
            input: Network {
                from_key: None,
                to_location: Cluster(
                    1,
                ),
                to_key: None,
                serialize_fn: Some(
                    | (id , data) : (hydro_lang :: MemberId < _ > , i32) | { (id . raw_id , hydro_lang :: runtime_support :: bincode :: serialize :: < i32 > (& data) . unwrap () . into ()) },
                ),
                instantiate_fn: <network instantiate>,
                deserialize_fn: Some(
                    | res | { let (id , b) = res . unwrap () ; (hydro_lang :: MemberId :: < () > :: from_raw (id) , hydro_lang :: runtime_support :: bincode :: deserialize :: < i32 > (& b) . unwrap ()) },
                ),
                input: FlatMap {
                    f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , std :: iter :: Map < std :: slice :: Iter < hydro_lang :: location :: cluster :: cluster_id :: MemberId < () > > , _ > > ({ use crate :: __staged :: stream :: * ; let ids__free = unsafe { :: std :: mem :: transmute :: < _ , & [hydro_lang :: MemberId < () >] > (__hydro_lang_cluster_ids_1) } ; | b | ids__free . iter () . map (move | id | (:: std :: clone :: Clone :: clone (id) , :: std :: clone :: Clone :: clone (& b))) }),
                    input: Chain {
                        first: Filter {
                            f: stageleft :: runtime_support :: fn1_borrow_type_hint :: < i32 , bool > ({ use crate :: __staged :: rewrites :: decoupler :: tests :: * ; | a | * a < 5 }),
                            input: Tee {
                                inner: <tee 0>: Map {
                                    f: | (_ , b) | b,
                                    input: Network {
                                        from_key: None,
                                        to_location: Cluster(
                                            0,
                                        ),
                                        to_key: None,
                                        serialize_fn: Some(
                                            | (id , data) : (hydro_lang :: MemberId < _ > , i32) | { (id . raw_id , hydro_lang :: runtime_support :: bincode :: serialize :: < i32 > (& data) . unwrap () . into ()) },
                                        ),
                                        instantiate_fn: <network instantiate>,
                                        deserialize_fn: Some(
                                            | res | { let (id , b) = res . unwrap () ; (hydro_lang :: MemberId :: < () > :: from_raw (id) , hydro_lang :: runtime_support :: bincode :: deserialize :: < i32 > (& b) . unwrap ()) },
                                        ),
                                        input: Map {
                                            f: | b | (MemberId :: < () > :: from_raw (__hydro_lang_cluster_self_id_2) , b),
                                            input: Map {
                                                f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: decoupler :: tests :: * ; | a | a + 1 }),
                                                input: Source {
                                                    source: Iter(
                                                        { use crate :: __staged :: rewrites :: decoupler :: tests :: * ; 0 .. 10 },
                                                    ),
                                                    location_kind: Cluster(
                                                        2,
                                                    ),
                                                    metadata: HydroIrMetadata {
                                                        location_kind: Cluster(
                                                            2,
                                                        ),
                                                        output_type: Some(
                                                            i32,
                                                        ),
                                                        cardinality: None,
                                                        cpu_usage: None,
                                                        network_recv_cpu_usage: None,
                                                        id: Some(
                                                            0,
                                                        ),
                                                    },
                                                },
                                                metadata: HydroIrMetadata {
                                                    location_kind: Cluster(
                                                        2,
                                                    ),
                                                    output_type: Some(
                                                        i32,
                                                    ),
                                                    cardinality: None,
                                                    cpu_usage: None,
                                                    network_recv_cpu_usage: None,
                                                    id: Some(
                                                        1,
                                                    ),
                                                },
                                            },
                                            metadata: HydroIrMetadata {
                                                location_kind: Cluster(
                                                    2,
                                                ),
                                                output_type: Some(
                                                    (hydro_lang :: location :: cluster :: cluster_id :: MemberId < () > , i32),
                                                ),
                                                cardinality: None,
                                                cpu_usage: None,
                                                network_recv_cpu_usage: None,
                                                id: Some(
                                                    2,
                                                ),
                                            },
                                        },
                                        metadata: HydroIrMetadata {
                                            location_kind: Cluster(
                                                0,
                                            ),
                                            output_type: Some(
                                                (hydro_lang :: location :: cluster :: cluster_id :: MemberId < () > , i32),
                                            ),
                                            cardinality: None,
                                            cpu_usage: None,
                                            network_recv_cpu_usage: None,
                                            id: Some(
                                                3,
                                            ),
                                        },
                                    },
                                    metadata: HydroIrMetadata {
                                        location_kind: Cluster(
                                            0,
                                        ),
                                        output_type: Some(
                                            i32,
                                        ),
                                        cardinality: None,
                                        cpu_usage: None,
                                        network_recv_cpu_usage: None,
                                        id: Some(
                                            4,
                                        ),
                                    },
                                },
                                metadata: HydroIrMetadata {
                                    location_kind: Cluster(
                                        0,
                                    ),
                                    output_type: Some(
                                        i32,
                                    ),
                                    cardinality: None,
                                    cpu_usage: None,
                                    network_recv_cpu_usage: None,
                                    id: Some(
                                        5,
                                    ),
                                },
                            },
                            metadata: HydroIrMetadata {
                                location_kind: Cluster(
                                    0,
                                ),
                                output_type: Some(
                                    i32,
                                ),
                                cardinality: None,
                                cpu_usage: None,
                                network_recv_cpu_usage: None,
                                id: Some(
                                    6,
                                ),
                            },
                        },
                        second: Filter {
                            f: stageleft :: runtime_support :: fn1_borrow_type_hint :: < i32 , bool > ({ use crate :: __staged :: rewrites :: decoupler :: tests :: * ; | a | * a >= 5 }),
                            input: Tee {
                                inner: <tee 0>,
                                metadata: HydroIrMetadata {
                                    location_kind: Cluster(
                                        0,
                                    ),
                                    output_type: Some(
                                        i32,
                                    ),
                                    cardinality: None,
                                    cpu_usage: None,
                                    network_recv_cpu_usage: None,
                                    id: Some(
                                        7,
                                    ),
                                },
                            },
                            metadata: HydroIrMetadata {
                                location_kind: Cluster(
                                    0,
                                ),
                                output_type: Some(
                                    i32,
                                ),
                                cardinality: None,
                                cpu_usage: None,
                                network_recv_cpu_usage: None,
                                id: Some(
                                    8,
                                ),
                            },
                        },
                        metadata: HydroIrMetadata {
                            location_kind: Cluster(
                                0,
                            ),
                            output_type: Some(
                                i32,
                            ),
                            cardinality: None,
                            cpu_usage: None,
                            network_recv_cpu_usage: None,
                            id: Some(
                                9,
                            ),
                        },
                    },
                    metadata: HydroIrMetadata {
                        location_kind: Cluster(
                            0,
                        ),
                        output_type: Some(
                            (hydro_lang :: location :: cluster :: cluster_id :: MemberId < () > , i32),
                        ),
                        cardinality: None,
                        cpu_usage: None,
                        network_recv_cpu_usage: None,
                        id: Some(
                            10,
                        ),
                    },
                },
                metadata: HydroIrMetadata {
                    location_kind: Cluster(
                        1,
                    ),
                    output_type: Some(
                        i32,
                    ),
                    cardinality: None,
                    cpu_usage: None,
                    network_recv_cpu_usage: None,
                    id: Some(
                        11,
                    ),
                },
            },
            metadata: HydroIrMetadata {
                location_kind: Cluster(
                    1,
                ),
                output_type: Some(
                    i32,
                ),
                cardinality: None,
                cpu_usage: None,
                network_recv_cpu_usage: None,
                id: Some(
                    12,
                ),
            },
        },
        metadata: HydroIrMetadata {
            location_kind: Cluster(
                1,
            ),
            output_type: Some(
                i32,
            ),
            cardinality: None,
            cpu_usage: None,
            network_recv_cpu_usage: None,
            id: Some(
                13,
            ),
        },
    },
]
